--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings 配置站点
-title: 'Do It Yourself'
+title: 'AddSalt.Blog'
 description: '做点东西自己玩'
 keywords: 'DIY'
 url: 'https://AddSalt8227.github.io' # your host
@@ -16,8 +16,8 @@ nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
 author: true
 name: '陈佳燕'
 NickName: '加盐'
-webtitle: 'your awesome webtitle'
-bio: 'your awesome bio'
+webtitle: '加盐'
+bio: 'hiahiahiahia~'
 about: true
 aboutyou: '一不小心大三了啊'
 portraits: '/assets/profile.jpeg' # your portraits image file path
